# fastcomments-django

./: .gitignore  MANIFEST.in  README.md  bump.py  bump.sh  pyproject.toml
.github/workflows/: tests.yml
example/: browser_smoke.py  manage.py
example/demo/: avatar_utils.py  demo_users.py  settings.py  sso.py  urls.py  views.py
example/templates/: base.html  home.html  signin.html  widget.html
fastcomments_django/: __init__.py  api.py  apps.py  conf.py  manager.py  sso.py  widgets.py
fastcomments_django/templates/fastcomments/: count_marker.html  widget.html
fastcomments_django/templatetags/: fastcomments.py
tests/: helpers.py  settings.py  test_manager.py  test_sso.py  test_templatetags.py  test_user_mapper.py  test_widget_matrix.py  urls.py
