# setuptools >= 77 accepts the PEP 639 SPDX `license = "MIT"` string below.
# (Older setuptools requires the deprecated `license = {text = "MIT"}` table.)
[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fastcomments-django"
version = "0.1.0"
description = "FastComments for Django - embed the comment widgets and sign Secure SSO with template tags."
readme = "README.md"
license = "MIT"
authors = [
    {name = "FastComments", email = "support@fastcomments.com"}
]
# The FastComments SDK's SSO module uses PEP 604 (X | None) annotations, which
# require Python 3.10+ at runtime.
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
# The base install is lightweight: Django plus the pure-stdlib SSO signer from
# the FastComments Python SDK. Server-side REST access needs the [api] extra,
# which pulls in the SDK's generated OpenAPI client.
dependencies = [
    "Django>=4.2",
    "fastcomments @ git+https://github.com/fastcomments/fastcomments-python.git@v3.0.1",
]

[project.optional-dependencies]
api = [
    "fastcomments[client] @ git+https://github.com/fastcomments/fastcomments-python.git@v3.0.1",
]
dev = [
    "pytest>=7.0.0",
    "pytest-django>=4.5.0",
    "ruff>=0.6.0",
    "mypy>=1.8.0",
]

[project.urls]
Homepage = "https://github.com/fastcomments/fastcomments-django"
Documentation = "https://docs.fastcomments.com"
Repository = "https://github.com/fastcomments/fastcomments-django"
Issues = "https://github.com/fastcomments/fastcomments-django/issues"

[tool.setuptools]
packages = ["fastcomments_django", "fastcomments_django.templatetags"]

[tool.setuptools.package-data]
fastcomments_django = ["templates/**/*", "py.typed"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.settings"
python_files = ["test_*.py"]
testpaths = ["tests"]
# Put the repo root on sys.path so `tests.settings` imports under the plain
# `pytest` runner (not just `python -m pytest`, which adds CWD implicitly).
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["example", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.10"
files = ["fastcomments_django"]
# The FastComments SDK (sso/client) and Django ship no type stubs here.
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
no_implicit_optional = true
